--- a/cos8/3.3.2/readme
+++ b/cos8/3.3.2/readme
@@ -1,1 +1,9 @@
 
+Qmail Toaster 3.3.2 (qmail-1.03-3.3.2) consists of the 3.3.1 patch with the addition SMTP DEBUG and the Qualys' reccomendation:
+   - SMTP debug patch: If env variable SMTP_DEBUG is set the SMTP client/server
+   - command transaction is logged from client connection to client quit command.
+   - Qualys patch CVE-2005-1513.
+
+Notes:
+   There are some, 2 that I know of, who have had multiple email deliveries because connections have died for some reason or another. The SMTP debug patch will track client
+   connection commands and server responses from the beginning to the end of the SMTP session.
