--- a/cos8/3.3.2/readme
+++ b/cos8/3.3.2/readme
@@ -5,11 +5,11 @@ Qmail Toaster 3.3.2 (qmail-1.03-3.3.2) consists of the 3.3.1 patch with the addi
    - Qualys patch CVE-2005-1513 (https://www.qualys.com/2020/05/19/cve-2005-1513/remote-code-execution-qmail.txt).
 
 Notes:
-   There are 2 people in the Qmail Toaster community, myself included, who have had multiple 
+   Several individuals in the Qmail Toaster community, myself included, have had duplicate 
    email deliveries because connections have died after email is queued but before the final
-   SMTP 'quit' command. This causes the delivering host to resend the email until the transaction 
-   is complete. The SMTP debug patch will track client connection commands and server responses 
-   from the beginning to the end of the SMTP session.
+   SMTP 'quit' command. This causes the delivering host to resend the email until the SMTP 
+   transaction is complete. The SMTP debug patch will track client connection commands and 
+   server responses from the beginning to the end of the SMTP session.
    
    With the most recent version of simscan (1.4.0-9) ppid is added to all output when evnvironment
    variable SIMSCAN_DEBUG="5" is defined. With SMTP_DEBUG monitoring SMTP transactions is simplified. 
