--- a/cos8/3.3.2/readme
+++ b/cos8/3.3.2/readme
@@ -7,10 +7,10 @@ Qmail Toaster 3.3.2 (qmail-1.03-3.3.2) consists of the 3.3.1 patch with the addi
 Notes:
    Several individuals in the Qmail Toaster community, myself included, have had duplicate 
    email deliveries, fortunately not often, because connections have died after email is 
-   queued but before the final SMTP 'quit' command is issued by the client. This causes the 
-   delivering host to resend the email until the SMTP transaction is complete. The SMTP debug 
-   patch will track client connection commands and server responses from the beginning to the 
-   end of the SMTP session.
+   queued but before the final SMTP 'quit' command is issued by the client or the server's 
+   221 response. This causes the delivering host to resend the email until the SMTP transaction 
+   is complete. The SMTP debug patch will track client connection commands and server responses 
+   from the beginning to the end of the SMTP session.
    
    With the most recent version of simscan (1.4.0-9) ppid is added to all output when evnvironment
    variable SIMSCAN_DEBUG="5" is defined. With SMTP_DEBUG monitoring SMTP transactions is simplified. 
