--- a/cos8/3.3.2/readme
+++ b/cos8/3.3.2/readme
@@ -2,7 +2,7 @@
   - Includes Qualys patch CVE-2005-1513 (https://www.qualys.com/2020/05/19/cve-2005-1513/remote-code-execution-qmail.txt).
   - Included SMTP Debug (export SMTP_DEBUG)
   
-  Qmail Toaster 3.3.4 (qmail-1.03-3.3.4) consists of the 3.3.1 patched with the addition SMTP DEBUG:
+  Qmail Toaster 3.3.2 (qmail-1.03-3.3.2) consists of the 3.3.1 patched with the addition SMTP DEBUG:
    - SMTP debug patch: If env variable SMTP_DEBUG is set the SMTP client/server command transaction (with pid) is logged throughout
    - from client connection to server 221 (end of session) response. This is an update of the previous DEBUG patch to be less intrusive
    - to the qmail-smtpd.
@@ -15,6 +15,6 @@ Notes:
    is complete. The SMTP debug patch will track client connection commands and server responses 
    from the beginning to the end of the SMTP session.
    
-   With the most recent version of simscan (1.4.0-9) ppid is added to all output when evnvironment
-   variable SIMSCAN_DEBUG="5" is defined. With SMTP_DEBUG (above) defined monitoring SMTP transactions 
+   With the most recent version of simscan (1.4.0-9) ppid is added to all debug output, defining 
+   evnvironment variable SIMSCAN_DEBUG="5". With SMTP_DEBUG (above) defined monitoring SMTP transactions 
    is simplified. 
